IDA-2132 #comment added the relavent files to build text from external source. Sub-task 3 complete, commiting to roll back if necessary

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,22 +3,22 @@
         "name": "Opdivo",
         "piDocuments": [{
                 "title": "A PI DOc",
-                "filePath": "./a/path/pi.pdf"
+                "filePath": "./PrescribingInformationA.pdf"
             },
             {
                 "title": "Another PI DOc",
-                "filePath": "./a/path/pi2.pdf"
+                "filePath": "./PrescribingInformationB.pdf"
             }
         ]
     }],
 
     "isiDocuments": [{
             "title": "An ISI",
-            "filePath": "./a/path/isi.html"
+            "filePath": "./isi.html"
         },
         {
             "title": "Another ISI",
-            "filePath": "./a/path/isi2.html"
+            "filePath": "./isi2.html"
         }
     ]
 
