IDA-2132 #comment looping for buttons to be created and hiding one of the iframes, partially complete subheadings method. Commit before making changes

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,16 +1,29 @@
 {
     "brands": [{
-        "name": "Opdivo",
-        "piDocuments": [{
-                "title": "A PI DOc",
-                "filePath": "./PrescribingInformationA.pdf"
-            },
-            {
-                "title": "Another PI DOc",
-                "filePath": "./PrescribingInformationB.pdf"
-            }
-        ]
-    }],
+            "name": "Opdivo",
+            "piDocuments": [{
+                    "title": "A PI DOc",
+                    "filePath": "./PrescribingInformationA.pdf"
+                },
+                {
+                    "title": "Another PI DOc",
+                    "filePath": "./PrescribingInformationB.pdf"
+                }
+            ]
+        },
+        {
+            "name": "Yeervoy",
+            "piDocuments": [{
+                    "title": "A PI DOc",
+                    "filePath": "./PrescribingInformationA.pdf"
+                },
+                {
+                    "title": "Another PI DOc",
+                    "filePath": "./PrescribingInformationB.pdf"
+                }
+            ]
+        }
+    ],
 
     "isiDocuments": [{
             "title": "An ISI",
