--- a/public/presentation_viewer/presentations/default/isiDocuments/manifest.json
+++ b/public/presentation_viewer/presentations/default/isiDocuments/manifest.json
@@ -1,21 +1,26 @@
 {
-    "brands": [{
+    "brands": [
+        {
             "name": "Opdivo",
-            "piDocuments": [{
-                "title": "A PI DOc",
-                "filePath": "isiDocuments/PrescribingInformationA.pdf"
-            }]
+            "piDocuments": [
+                {
+                    "title": "A PI DOc",
+                    "filePath": "isiDocuments/PrescribingInformationA.pdf"
+                }
+            ]
         },
         {
             "name": "Yeervoy",
-            "piDocuments": [{
-                "title": "A PI DOc",
-                "filePath": "isiDocuments/PrescribingInformationA.pdf"
-            }]
+            "piDocuments": [
+                {
+                    "title": "A PI DOc",
+                    "filePath": "isiDocuments/PrescribingInformationB.pdf"
+                }
+            ]
         }
     ],
-
-    "isiDocuments": [{
+    "isiDocuments": [
+        {
             "title": "An ISI",
             "filePath": "isiDocuments/isi.html"
         },
@@ -24,5 +29,4 @@
             "filePath": "isiDocuments/isi2.html"
         }
     ]
-
 }
