--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build &&  zip -r -X ./isitray ./dist  ",
+    "build": "rm -rf ./dist && rm -f ./isitray.zip && vue-cli-service build &&  zip -r -X ./isitray ./dist",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
